more starter code

--- a/lecture_04-css-selectors/css/review.css
+++ b/lecture_04-css-selectors/css/review.css
@@ -1,16 +1,16 @@
 
-/* Q1 */
+/* Activity 2 */
 /* .alert.success {
   color: yellow;
-} */
-/* .alert .success {
-  color: yellow;
-} */
-/* .alert, .success {
-  color: yellow
-} */
-/* .alert--.success {
-  color: yellow
+} 
+.alert .success {
+  color: green;
+}
+.alert, .success {
+  color: red
+}
+.alert--.success {
+  color: blue
 } */
 
 
