changed the default font to match the design

--- a/lecture_05-css-flexbox/css/style.css
+++ b/lecture_05-css-flexbox/css/style.css
@@ -28,6 +28,10 @@ nav a {
   max-width: 150px;
 }
 
+.about-section p {
+  font-family: "Edu AU VIC WA NT Hand", cursive ;
+}
+
 
 /* topics cards */
 .topics-section .card {
