--- a/lecture_05-css-flexbox/css/style.css
+++ b/lecture_05-css-flexbox/css/style.css
@@ -18,6 +18,17 @@ nav a {
   color: white;
 }
 
+nav ul {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+nav li {
+  display: inline;
+  margin: .25em;
+}
+
 
 /* about section */
 .about-section {
@@ -38,8 +49,21 @@ nav a {
   border: 1px solid black;
 }
 
+.card-deck {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 .topics-section img {
   max-height: 150px;
+}
+
+.topics-section .card {
+  flex-grow: 1;
+  padding: 10px;
+  margin: 3px;
+  text-align: center;
 }
 
 /* other */
