first css changes

--- a/lecture_06-css-responsive-frameworks/css-responsive/css/style.css
+++ b/lecture_06-css-responsive-frameworks/css-responsive/css/style.css
@@ -71,3 +71,10 @@ main {
 footer {
   font-size: smaller;
 }
+
+/* media queries */
+@media (min-width: 500px) {
+  body {
+    background-color: pink;
+  }
+}
